--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.ts",
   "scripts": {
     "ts-node": "ts-node src/index.ts",
-    "dev": "nodemon -e ts -w ./src -x npm run ts-node"
+    "dev": "nodemon -e ts -w ./src -x npm run ts-node",
+    "build": "rimraf ./dist && tsc",
+    "start": "npm run build && node dist/index.js"
   },
   "author": "Aleksandr Stepaniuk",
   "license": "ISC",
@@ -16,8 +18,10 @@
     "@types/node": "^14.14.7",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.6",
+    "rimraf": "^3.0.2",
+    "ts-loader": "^8.0.11",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "@typegoose/typegoose": "^7.4.2",
@@ -26,7 +30,10 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "generate-pincode": "^5.0.3",
+    "googleapis": "^65.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.15"
+    "mongoose": "^5.10.15",
+    "nodemailer": "^6.4.16"
   }
 }
