--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ts-node": "ts-node src/index.ts",
     "dev": "nodemon -e ts -w ./src -x npm run ts-node",
     "build": "rimraf ./dist && tsc",
-    "start": "npm run build && node dist/index.js"
+    "start": "node dist/index.js"
   },
   "author": "Aleksandr Stepaniuk",
   "license": "ISC",
