--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "ts-node": "ts-node src/index.ts",
     "dev": "nodemon -e ts -w ./src -x npm run ts-node",
-    "build": "rimraf ./dist && tsc",
-    "start": "node dist/index.js"
+    "build": "rimraf ./build && tsc",
+    "start": "node build/index.js"
   },
   "author": "Aleksandr Stepaniuk",
   "license": "ISC",
