--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Aleksandr Stepaniuk",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.0",
@@ -28,6 +29,7 @@
     "@types/bcrypt": "^3.0.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "generate-pincode": "^5.0.3",
